--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -4,17 +4,21 @@
 - date: 2020-06-01
   name: Accounts and group projects
   events:
-    - name: "Join Our Slack Channel (Check Email)"
-    - name: "Add your projet idea to the google sheet to the Introduction Spereadsheet (Check Email)"
+    - name: "Join our Slack Channel (check email)"
+    - name: "Add your projet idea to the google sheet (check email)"
     
 - date: 2020-06-8
-  name: Courses posted online and others events
+  name: Courses posted online
   events:
     - name: "Monday: [Ethics : Part 1 & 2](https://compsocialscience.github.io/summer-institute/curriculum#day_1)"
     - name: "Tuesday: [Collecting Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
     - name: "Wednesday: [Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
     - name: "Thursday: [Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
     - name: "Friday: [Unsupervised Machine Learning](https://compsocialscience.github.io/summer-institute/curriculum#day_3) and [Social Network Analysis](http://codingsocialscience.org/book/r1/node56.html)"
+ 
+- date: "SICSS-Montréal First Week: Discussions and Exercises"
+  events:
+    - name: "**Discussion Sessions**<br/>[SICSS Learning materials](https://compsocialscience.github.io/summer-institute/curriculum) will be covered during the discussion sessions. Participants will be expected to watch the relevant vidoes on the website before coming to the discussion session. Relevant links can be found on the schedule. The aim is to underline important points in the materials, to discuss participant's questions and to prepare participants for Exercises sessions."
     
 - date: 2020-06-15
   name: Introduction and Ethics
@@ -39,9 +43,9 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "1:30 - 3:00 Group exercise in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:15 - 1:30 Introduction to the [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:30 - 3:00 [Group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Guest speaker : [Stephane Helleringer](https://www.jhsph.edu/faculty/directory/profile/3136/st-phane-helleringer) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
 
@@ -49,14 +53,14 @@
   name: Automated Text Analysis
   events:
     - name: "ADVANCE watch [Automated Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3)"
-    - name: "10:00 - 10:15 Logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:00 - 10:15 Logistics and Intro to [Group Exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "10:15 - 11:30 Small group discussions in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:15 - 1:30 Introduction to the [group exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "1:30 - 3:00 Group exercise in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about the [group exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Possible guest speaker in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
 
@@ -65,13 +69,13 @@
   events:
     - name: "ADVANCE watch [Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
     - name: "10:00 - 10:15 Logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "10:15 - 10:30 Introduction to the group exercise in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "10:30 - 11:30 Morning group exercise  in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:15 - 10:30 Introduction to the [Group Exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "10:30 - 11:30 Morning [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md)  in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:00 Afternoon group excercise in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
-    - name: "3:00 - 3:15 Whole group debrief about group exercise  in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:15 - 3:00 Afternoon [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
+    - name: "3:00 - 3:15 Whole group debrief about [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md)  in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Guest speaker : [Will Hamilton](https://williamleif.github.io/) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
 
@@ -96,7 +100,42 @@
 
 - date: 2020-06-21
   name: Day off
-
+  
+- date: "SICSS-Montréal Second Week: Work on group projects (optional) and/or participate in SICSS Festival"
+  events:
+    - name: "**Projects**<br/> This week will be only devoted to work on  group projects or individual projects. Participants will be expected to report their progressions every morning and to present their results at the end of the week."
+    - name: "**[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)**<br/> SICSS-Duke will organize The SICSS Festival in which alumni from all SICSS locations are hosting events such as tutorials, panel discussions, or debates. The only requirement to participate SICSS-Festival is filling the registration form. Detailed information can be found in its website."
+ 
 - date: 2020-06-22
-  name: "(2020-06-22 : 2020-06-26) : Work on group projects (optional)"
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors](https://compsocialscience.github.io/summer-institute/2020/materials/research-speed-dating/Speed_Dating.html#/)"
+    - name: "10:15 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"    
+    - name: "12:00 - 1:00 Panel discussion on teaching computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "1:15 - 3:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+
+- date: 2020-06-23
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "3:30 - 4:30 Optional: Panel discussion on diversity in computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
+
+- date: 2020-06-24
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "1:00 - 2:30 Optional: Using Empirica for high-throughput virtual lab experiments. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
+
+- date: 2020-06-25
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "11:00 - 12:00 Optional: Creating open source software as part of an academic career. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "3:00 - 4:00 Small group meetings with Elizabeth Bruch"
+    - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
+
+- date: 2020-06-26
+  name: Present group projects and/or participate in SICSS Festival
+  events:
+    - name: "10:00 - 11:00 Optional: Opportunities and challenges with industry collaborations. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)."
+    - name: "12:00 - 4:00 Present group projects (*Zoom*)"
+    - name: "4:00 - 4:30 Debrief and conclusion"
+
     
