--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -19,7 +19,7 @@
     - name: "1:30 - 3:00 [Group excercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day2-digital-trace-data/Group%20Exercise%20Day%202.Rmd)"
     - name: "3:00 - 3:15 Whole group debrief about group excercise"
     - name: "3:15 - 4:00 Break"
-    - name: "4:00 - 5:00 Johannes Eichstadt, Stanford University"
+    - name: "4:00 - 5:00 Johannes Eichstadt (Stanford Psychology)"
     - name: "5:00 - 5:15 Debrief and logistics"
 
 - date: 2020-06-17
@@ -29,7 +29,7 @@
     - name: "1:30 - 3:15 [Group Exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
     - name: "3:15 - 3:30 Whole group debrief about group excercise"
     - name: "3:30 - 4:30 Break"
-    - name: "4:30 - 5:30 Sharad Goel, Stanford University"
+    - name: "4:30 - 5:30 Sharad Goel (Stanford Computational Policy Lab)"
     - name: "5:30 - 5:45 Debrief and logistics"
       
 - date: 2020-06-18
@@ -60,31 +60,31 @@
 - date: 2020-06-22
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Luke Terra, Stanford University"
+    - name: "4:00 - 5:00 Luke Terra (Stanford Community Engaged Learning and Research)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-23
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Dennis Feehan, UC Berkeley (Demography)"
+    - name: "4:00 - 5:00 Dennis Feehan (UC Berkeley Demography)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-24
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Johan Ugander, Stanford University (Management Science & Engineering)"
+    - name: "4:00 - 5:00 Johan Ugander (Stanford Management Science & Engineering)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-25
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Sameer Srivastava, UC Berkeley (Haas School of Business)"
+    - name: "4:00 - 5:00 Sameer Srivastava (UC Berkeley Haas School of Business)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-26
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Susan Athey, Stanford Graduate School of Business"
+    - name: "4:00 - 5:00 Susan Athey (Stanford Graduate School of Business)"
     - name: "5:00 - 5:30 Project Check-Ins"
 
 - date: 2020-06-27
@@ -96,13 +96,13 @@
 - date: 2020-06-29
   name: Work on partner projects
   events:
-    - name: "4:00 - 5:00 Rob Reich, Stanford University (Political Science)"
+    - name: "4:00 - 5:00 Rob Reich (Stanford Political Science)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-30
   name: Work on partner projects
   events:
-    - name: "4:00 - 5:00 Eli Ben-Michael, UC Berkeley (Statistics)"
+    - name: "4:00 - 5:00 Eli Ben-Michael (UC Berkeley Statistics)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-07-01
@@ -114,7 +114,7 @@
 - date: 2020-07-02
   name: Work on project presentations
   events:
-    - name: "5:00 - 5:30 Debrief and logistics"    
+    - name: "4:00 - 5:30 Aniket Kesari (UC Berkeley D-Lab), Final Presentations"    
 
 - date: 2020-07-03
   name: PPP (Partner Project Presentations)
