--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -69,7 +69,7 @@ organizers:
   people:
     - name: Jae Yeon Kim
       image: /assets/images/jae_yeon_kim.png
-      bio: Jae Yeon Kim is a PhD candidate in Political Science, a D-Lab data science fellow, and a data science education program fellow at UC Berkeley. He uses behavioral science, statistics, and data science tools to study how people think and behave with a focus on diversity and inclusion issues. His award-winning dissertation applies computational, statistical, and qualitative methods to understand what unites racial minority groups in the United States. His most recent research interest is narrowing the gap between the ethics and practice of using machine learning.
+      bio: Jae Yeon Kim is a PhD candidate in Political Science, a D-Lab data science fellow, and a data science education program fellow at UC Berkeley. He uses data science to advance social science research on diversity inclusion. His award-winning dissertation applies computational, statistical, and qualitative methods to understand what unites racial minority groups in the United States. His most recent research investigates intersectional bias in hate speech and abusive language datasets.
       website: https://jaeyk.github.io/
 
     - name: Jaren Haber
