--- a/_data/2021/fgv-dapp-brazil/participants.yml
+++ b/_data/2021/fgv-dapp-brazil/participants.yml
@@ -19,3 +19,74 @@
 - name: Juliana Brandão
   bio: "Juliana Brandão is a Graduate Student at the University of Pará at the Economics Post Graduation Program, CAPES scholarship. Also, She has experience in prediction models in the state bank of Pará, and VAR models for comparative analysis in international macroeconomic data and public data, using R and time series econometrics. Nowadays, is a participant in the Social Equity Laboratory of University of Pará, developing models and impact analysis of public policies on income."
   image: /assets/images/julianabrandao.jpg 
+
+- name: Larissa	Galdino de Magalhães Santos
+  bio: "Larissa is a researcher in Digital Policies, Data, and Democracy at CyberBRICS, Faculty of Law of the Getulio Vargas Foundation, Rio de Janeiro. Her research is located in the area of government technology and innovation, with a special focus on open data, smart cities, and political implications. Larissa holds a Ph.D. in Political Science from the State University of Campinas and analyzed open government in the city of São Paulo. She was a fellow of the Future Leaders in the Americas and Caribbean Program, as a visiting researcher at the University of Montreal. Larissa has a post-doctorate from the Institutional Program for Internationalization in Data Science in Social Sciences of the Getúlio Vargas Foundation, School of Social Sciences. She was also involved with the Rio Doce Basin Rehabilitation and Environmental Disaster Network when she did a postdoc in Sociology. Larissa accumulated activities as a fellow at the Southern Cyber School on Internet Governance of the Organization of American States, a researcher in city connectivity infrastructure at FGV Europe, consultant for the Regional Open Data Barometer for Latin America and the Caribbean, Latin American Initiative of Los Datos Abiertos."
+  image: /assets/images/larissagaldino.jpg
+  
+- name: Leonardo Nascimento
+  bio: "Leonardo F. Nascimento is a professor at the Federal University of Bahia where he coordinates the Digital Humanities Laboratory (LABHDUFBA). His research interests include digital sociology, digital humanities and computational social science. He is the author of the book Sociologia Digital: uma breve introdução - EDUFBA - 2020"
+  image: /assets/images/leonardonascimento.jpg
+  website: https://leofn.com/
+ 
+  
+- name: Lorena Giuberti
+  bio: "Lorena is a Phd fellow in Economics at UNU-MERIT/Maastricht University. She holds an MA and a BA degree in Economics from the University of Brasilia, Brazil. Her research examines the impacts of technology and automation in decision-making and their implications for policies, using experimental and quasi-experimental approaches. Prior to her doctoral studies, she served at the Secretary of Trade in Brazil for more than 5 years."
+  image: /assets/images/lorenagiuberti.png
+  
+  
+- name: Luana	Calzavara
+  bio: "Luana Calzavara is a PhD student in Political Science at State University of Rio de Janeiro (UERJ). She holds a BA in Social Sciences in Federal University of Rio de Janeiro, and a MSc in Political Science at UERJ. Her research interests includes electoral systems and party systems, with focus on party fragmentation of Brazilian National Congress."
+  image: /assets/images/luanacal.jpg
+  website: https://www.linkedin.com/in/luanacalzavara/ 
+  
+- name: Luiz Paulo	Carvalho
+  bio: "My name is Luiz Paulo Carvalho and I am a PhD student in Informatics at the Federal University of Rio de Janeiro (UFRJ). Currently researching Computational Ethics and Resistance Ethics, my scope is to analyze, evaluate and improve the Ethics and Computing scenario in Brazil, with social justice, inclusion, sustainability and human emancipation"
+  image: /assets/images/luizpaulo.jpg
+  
+- name: Marcelo Alves
+  bio: "Professor at the Superior School of Propaganda and Marketing and associated researcher at Lamide (Media & Democracy Lab). Marcelo holds a doctoral degree in Communication from the Fluminense Federal University, Rio de Janeiro. He has published original papers on on several journals, including Information, Communication and Society and New Media and Society, focusing on political communication, digital culture and datafication. Recently he was co-author of an article on Brazilian alternative media, published in TripleC. He is the author of the book #VaipraCuba: a gênese das redes de direita no Facebook, which investigates the early formation of far-right movements during the Brazilian presidential election of 2014."
+  image: /assets/images/marceloalves.jpg
+  website: https://marceloalves.netlify.app/
+
+
+- name: Marina Merlo
+  bio: "Marina Merlo is currently pursuing a PhD in Political Science at University of São Paulo Her work covers gender inequality in democracy, focusing on political parties, and currently investigates how the new technologies of communication might have changed democracy and political participation. Natalie received her BA in Social Sciences and MSc in Political Science from University of São Paulo."
+  image: /assets/images/marinamerlo.jpeg
+  
+  
+- name: Marisa	Vasconcelos
+  bio: "Dr. Marisa Vasconcelos is a research scientist at IBM Research in Brazil. Her research focuses on societal problems such as misinformation dissemination, hate speech, and underrepresented minorities. She co-authored several papers analyzing misinformation dissemination on WhatsApp groups during the Brazilian elections."
+  image: /assets/images/marisavasconcelos.png
+  website: https://www.linkedin.com/in/marisa-affonso-vasconcelos-0116b16/
+
+- name: Matheus	Ferreira
+  bio: "Matheus Ferreira is a PhD candidate in Political Science at the Federal University of Minas Gerais, where he is also affiliated with the Center for Political Behavior Studies (CECOMP). Him current research examines the evangelical vote for Bolsonaro in 2018 Brazilian elections. He holds a B.A. and M.A. in Social Science from the Federal University of Juiz de Fora."
+  image: /assets/images/matheusferreira.jpg
+  
+- name: Nicolás	Llano Linares
+  bio: "Nicolás Llano is a graduate student in the MBA Data Journalism program at the Brazilian Institute of Education, Development and Research (IDP). He received his PhD and M.Sc. in Communication Sciences from São Paulo University. He was an exchange student at the University of Copenhagen in the Department of Film and Social Sciences, and a participant of the first Code Societies course at the School for Poetic Computation. His current research focuses on media infrastructures, datafication and civic tech. His past research examined the effects of the mediatization of cultural fields on the creation and management of media capital, specifically on urban food networks."
+  image: /assets/images/nicolas.jpg
+  website: www.tinyurl.com/nicolaslll
+  
+ 
+- name: Otávio	Vinhas
+  bio: "Ph.D. Student in Information and Communication studies at University College Dublin. Researcher at the MIDIARS research lab."
+  image: /assets/images/otaviovinhas.jpg
+  
+   
+- name: Paola	Guerra
+  bio: "Lawyer and university professor. Master's and Doctorate in Law from PUCSP. PhD from the Università del Salento (Italy). Post-doctorate from EGS/Switzerland, from the University of Coimbra, CES, from the Law School of USP, and from PUCSP- TIDD. Collaborating researcher at UNICAMP, IEA/USP, Lawgorithmics, Advanced Institute of AI, and LGPD. Visiting fellow - European University Institute /It. Visiting researcher - Scuola Normale Superiore de Pisa - Italy and University of Lisbon/Pt. Post-doctoral student - New Technologies and Law - PROGRAMMA DI POST-DOTTORATO, unirc.it."
+  image: /assets/images/paolacantarini.jpg
+  website: https://eldfa.education
+
+    
+- name: Patricia Pavessi
+  bio: "Antropóloga, Docente e Pesquisadora dos DCSO e PGCS /UFES, coordenadora do Laboratório de Estudos de Identidades e Tecnologias (LEIDTEC/UFES), integrante do Grupo Interinstitucional de Estudos de Cibercultura e do Grupo Estudos do Consumo. Tem experiência e interesse em Etnografia Digital e Computacional, Ciência Social Computacional, Consumo de Tecnologias de Informação e Propaganda Computacional."
+  image: /assets/images/patriciapavessi.jpg
+  
+  
+- name: Victoria	Oldemburgo de Mello
+  bio: "Victoria Oldemburgo de Mello is pursuing a master's degree in experimental psychology at the University of Toronto. She received her BA in psychology from the Federal University of Santa Catarina. Currently, she is interested in how individual differences relate to social media use and the consequences of social media use for well-being and affective polarization."
+  image: /assets/images/victoria.jpg
+  
