--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -26,18 +26,18 @@
 - date: 2021-06-14
   name: Introduction to curriculum and group discussions on Ethics
   events:
-  
+ 
 - date: 2021-06-15
-  name: Natural Language Processing and Applications to Computational Social Science 
-  events:
-     - name: "**Tutorial Session by [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)**<br/> This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
-
-- date: 2021-06-16
   name: Automated Methods of Protest Event Collection 
   events:
      - name: "**Tutorial Session by [Erdem Yoruk](https://emw.ku.edu.tr/?staff=erdem-yoruk)**<br/> Protest event analysis is the most common approach for social movement scholars as it is an unobtrusive and context-sensitive technique that can convert unstructured matter into large volumes of data, in a cross-national, cross-time and cross-issue comparative character. The use of digitized new sources and automated approaches to collect protest events information has accelerated in the 2000s. The selection bias problem, substantial labor costs, and generalizability problems associated with manual coding have constituted the demand conditions for automated methods. What makes automation possible was the big data revolution, which generated vast amounts of news sources digitally available to researchers. Besides, the unprecedented computational power that was built by new generations of processors finally enabled the application of artificial intelligence techniques that had been developed long ago. Henceforth, several very large projects were formed to apply fully or semi-automated methods to collect contentious political event data from news sources, such as GDELT, ICEWS, EMBERS and SPEED, POLCON, and MMAD. In this presentation, we will describe the potentials and challenges of using artificial intelligence to understand social movements and then I will present the new bottom-up methodological approach that has adopted by our European Research Council (ERC) funded project to overcome these challenges."
      - name: "**[Readings](https://drive.google.com/drive/folders/1odn_5mzw2oC4Ftw4n3Chqypp0LI5wBId?usp=sharing)**"
-
+ 
+- date: 2021-06-16
+  name: Microgeography of Ethnic Enclaves 
+  events:
+     - name: "**Tutorial Session by [Özge Öner](https://www.landecon.cam.ac.uk/directory/ozge-oner-dr)**<br/> TBA"
+     
 - date: 2021-06-17
   name: Characterizing the Nature of Online Political Conversations at Scale 
   events:
@@ -50,9 +50,9 @@
       - name: "**[Readings](https://drive.google.com/file/d/1GABVSOjlSqu1l8HgajbzkArmoUTDsfCW/view?usp=sharing)**"
   
 - date: 2021-06-19
-  name: Microgeography of Ethnic Enclaves 
+  name: Off Day
   events:
-     - name: "**Tutorial Session by [Özge Öner](https://twitter.com/ozge_oner)**<br/> TBA"
+     - name: 
      
 - date: 2021-06-20
   name: Last day for declaring group members and project proposals
@@ -63,13 +63,14 @@
      - name: "**Group Projects and Alumni Sessions**<br/> This week will be focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond!"
 
 - date: 2021-06-21
-  name: Short presentation of project proposals and Alumni Session
+  name: Short presentation of project proposals
   events:
   
 - date: 2021-06-22
-  name: Office Hour and Alumni Session
+  name: Natural Language Processing and Applications to Computational Social Science 
   events:
-  
+     - name: "**Tutorial Session by [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)**<br/> This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
+
 - date: 2021-06-23
   name: Office Hour and Alumni Session
   events:
