--- a/_data/2021/law/speakers.yml
+++ b/_data/2021/law/speakers.yml
@@ -1,16 +1,15 @@
 - name: Angela Dorrough
-- image: /assets/images/ AngelaDorrough.jpeg
+- image: /assets/images/AngelaDorrough.jpg
 - bio: "Dr. Angela Dorrough is a Postdoctoral Researcher in Social Psychology at the University of Cologne. She started her academic career as a research fellow at the Max Planck Institute for Research on Collective Goods and finished her PhD at the University of Goettingen in 2017. Her research can be divided roughly into two main areas: One the one hand she investigates the determinants of cross-cultural cooperation behavior; on the other hand, her research is dedicated to discrimination (e.g., in selection processes) and potential interventions (e.g., quota rules) to reduce discrimination. For her research she combines methods of economics and psychology to test social psychological theories. Furthermore, she is committed to transparency and replicability in research and communicates these principles as part of her teaching activities."
 - website: http://soccco.uni-koeln.de/angela-dorrough.html
 
-- name:
-- image: 
-- bio: 
-- website: 
+- name: Gijs van Dijck
+- image: /assets/images/GijsvanDijck.jpg
+- bio: "Gijs integrates legal, empirical, and computational analysis in order to improve the description, application, understanding, and evaluation of the law. He has taught courses on tort law, contract law, property law, empirical legal research, and computational legal research. Gijs has published in top journals including the Journal of Empirical Legal Studies and the Oxford Journal of Legal Studies. He has been a speaker at various conferences, including ones at Oxford, Harvard, Yale, Duke and Cornell. He was a visiting scholar at Stanford University in 2011.
 
-- name:
-- image: 
-- bio: 
-- website: 
+Gijs is Professor of Private Law, (co-)director of the Maastricht Law and Tech Lab, Principal Investigator at Brightlands Institute for Smart Society (BISS), and researcher at M-EPLI."
+- website: https://www.maastrichtuniversity.nl/gijs.vandijck
+
+
 
  
