--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -54,7 +54,7 @@
 - date: 2021-06-29
   name: Invited speakers and workshop on individual projects 
   events:
-    - name: "10:00 - 11:30 Cesar Hidalgo (*Zoom*)"
+    - name: "10:00 - 11:30 Cesar Hidalgo: How Humans Judge Machines (*Zoom*)"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop Individual Projects (*Zoom*)"
     - name: "15:00 - 16:30 Abdullah Almaatouq: In search for Synergy in the Task Space (*Zoom*)"
     - name: "17:00 - 18:30 Rachael Tatman: Rules aren't dead: Hybrid ML and rule based systems for practical, trustworthy NLP (*Zoom*)"
