--- a/_data/2021/lisbon/schedule.yml
+++ b/_data/2021/lisbon/schedule.yml
@@ -30,7 +30,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 Break"
-    - name: "5:00 - Euro Cup Portugal vs. Hungary"
+    - name: "4:30 - 6:00 Talk by Prof. Joana Sa"
 
 - date: 2021-06-16
   name: Automated Text Analysis
@@ -56,6 +56,7 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:30 - 6:00 Talk by Moinul Zaber"
 
 - date: 2021-06-18
   name: Mass collaboration and machine learning
